# sloe

./: README.md  cabal.project.local  sloe.cabal
examples/: fizzbuzz.sloe  logic.sloe  numbers.sloe  pairs.sloe  primes.sloe  recursion.sloe  tree.sloe
lib/Sloe/: Compilation.hs  Parsing.hs  Types.hs
src/: Main.hs
