cabal-version:      2.4
name:               sloe
version:            0.1.0.0
author:             Dreary Lisper
maintainer:         drearylisper@gmail.com

executable sloe
    ghc-options:      -O3
    main-is:          Main.hs
    build-depends:    containers, lambda, sloe, base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

library
    ghc-options:      -O3
    exposed-modules:  Sloe.Parsing, Sloe.Compilation, Sloe.Types
    build-depends:    lambda, containers, base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010
